Fixed api problems, radius for search was too small

--- a/movie_club_app/static/css/base_style.css
+++ b/movie_club_app/static/css/base_style.css
@@ -10,8 +10,14 @@ body {
 
 #login_or_sign_up {
     text-align: right;
+    background-color: deeppink;
 }
 
 #welcome_user_msg {
     text-align: right;
+    background-color: deeppink;
+}
+
+#home {
+    background-color: white;
 }
